--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
+separate_audio.zip filter=lfs diff=lfs merge=lfs -text
 pickles.zip filter=lfs diff=lfs merge=lfs -text
