--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 separate_audio.zip filter=lfs diff=lfs merge=lfs -text
 pickles.zip filter=lfs diff=lfs merge=lfs -text
+u00.zip filter=lfs diff=lfs merge=lfs -text
